--- a/src/main/resources/templates/sample.html
+++ b/src/main/resources/templates/sample.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>StaRt</h1>
+        <p>幸せな時間をどれだけ過ごせるかだ</p>
+        <p>微々たるものでも愛に気付けるか</p>
     </body>
 </html>
